# oneVR

./: .clang-format  .gitignore  MODULE.bazel  README.md
cam/: BUILD.bazel
cam/gopro_hero_12/: calibration.yaml  config.yaml
scripts/: lint.sh  setup_linux.sh  setup_runpod.sh
util/: BUILD.bazel
util/gpu/: BUILD.bazel
util/gpu/include/onevr/: cuda_uv_map.h
util/gpu/src/: cuda_uv_map.cu
util/include/onevr/: ffmpeg_util.h  frame.h  image_processing.h  image_util.h  lut.h  uv_map.h  video_decoder.h  video_encoder.h
util/src/: ffmpeg_util.cpp  image_processing.cpp  image_util.cpp  uv_map.cpp  video_decoder.cpp  video_encoder.cpp
vr180/: README.md  readme.md
vr180/warp/: BUILD.bazel  config.yaml
vr180/warp/include/: config.h  warp.h
vr180/warp/src/: config.cpp  main.cpp  warp.cpp  warp_slut.cpp
vr180/warp_encoder/: BUILD.bazel  config.yaml
vr180/warp_encoder/include/: config.h  warp.h
vr180/warp_encoder/src/: config.cpp  main.cpp  warp.cpp
vr180/warper/: BUILD.bazel
vr180/warper/src/: main.cpp
