module(
    name = "onevr",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_cuda", version = "0.2.5")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")

cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "/usr/local/cuda",
)

use_repo(cuda, "local_cuda")
