load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
    name = "cuda_uv_map",
    srcs = ["src/cuda_uv_map.cu"],
    hdrs = ["include/onevr/cuda_uv_map.h"],
    copts = ["-std=c++20"],
    includes = ["include"],
    deps = [
        "//util:util",
    ],
    visibility = ["//visibility:public"],
)
