cc_library(
    name = "warp_lib",
    srcs = [
        "src/warp.cpp",
        "src/config.cpp",
    ],
    hdrs = [
        "include/warp.h",
        "include/config.h",
    ],
    includes = ["include"],
    deps = [
        "//util:util",
        "//util/gpu:cuda_uv_map",
    ],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "warp_encoder",
    srcs = [
        "src/main.cpp",
    ],
    copts = ["-std=c++20"],
    defines = ["__STDC_CONSTANT_MACROS", "__STDC_FORMAT_MACROS", "__STDC_LIMIT_MACROS"],
    deps = [
        ":warp_lib",
        "//util:util",
    ],
    data = [
        "//cam:configs",
    ],
    linkopts = [
        "-lavformat",
        "-lavcodec",
        "-lavutil",
        "-lswscale",
        "-lswresample",
        "-lyaml-cpp",
    ],
)
