cc_binary(
    name = "warper",
    srcs = ["src/main.cpp"],
    copts = ["-std=c++20"],
    defines = ["__STDC_CONSTANT_MACROS", "__STDC_FORMAT_MACROS", "__STDC_LIMIT_MACROS"],
    deps = [
        "//util:media",
    ],
    data = [
        "//cam:configs",
    ],
    linkopts = [
        "-lavformat",
        "-lavcodec",
        "-lavutil",
        "-lswscale",
        "-lswresample",
    ],
)
